--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 numpy>=1.12.1
 ipython>=6.1.0
-torch>=1.5.0
-opencv-python>=4.4.0
+pytorch>=1.5.0
+opencv>=3.4.1
 Shapely>=1.5.13
 Pillow>=4.2.1
 matplotlib>=1.5.1
 Flask>=0.10.1
+cudatoolkit==10.1
+torchvision~=0.7.0
+setuptools~=50.3.0
